# nockchain

./: Cargo.toml  docker-compose-monitoring.yml  mining-superiority-strategies.md  mining-system-design.md  nockchain-mining-pool-design.md  nockchain-pool-implementation-guide.md
crates/nockapp/src/kernel/: form.rs
crates/nockapp/src/nockapp/: mod.rs
crates/nockchain/: Cargo.toml
crates/nockchain-libp2p-io/src/: nc.rs
crates/nockchain-pool-coordinator/: Cargo.toml
crates/nockchain-pool-coordinator/src/: coordinator.rs  error.rs  lib.rs  metrics.rs  payout.rs
crates/nockchain-pool-coordinator/src/database/: mod.rs  redis_store.rs  schema.rs
crates/nockchain-pool-coordinator/src/shares/: computation_proof.rs  mod.rs  types.rs  validator.rs
crates/nockchain-pool-coordinator/src/stratum/: connection.rs  mod.rs  protocol.rs  server.rs
crates/nockchain/src/: lib.rs  mining.rs  pool_client.rs
crates/nockvm/rust/nockvm/src/: interpreter.rs
crates/zkvm-jetpack/src/jets/: tip5_jets.rs  verifier_jets.rs
prompts/: support-nat.md
